cloud effect, link portfiolio and overlapping fix

--- a/css/main.css
+++ b/css/main.css
@@ -91,6 +91,26 @@ a:hover {
   outline: 0;
 }
 
+/* unvisited link */
+a:link {
+  color: #777777;
+}
+
+/* visited link */
+a:visited {
+  color: #777777;
+}
+
+/* mouse over link */
+a:hover {
+  color: #777777;
+}
+
+/* selected link */
+a:active {
+  color: #777777;
+}
+
 .btn.active.focus,
 .btn.active:focus,
 .btn.focus,
@@ -2679,4 +2699,82 @@ h6 {
 
 .switch-wrap p {
   margin: 0;
+}
+
+/*cloud*/
+@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
+* {
+  margin: 0;
+  padding: 0;
+  font-family: "Poppins", sans-serif;
+  box-sizing: border-box;
+}
+.banner {
+  position: relative;
+  height: 100vh;
+  width: 100%;
+  background: url("https://i.postimg.cc/sxrsD9JB/bg.jpg");
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+}
+h2 {
+  position: relative;
+  color: #fff;
+  font-size: 12rem;
+}
+.clouds {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  pointer-events: none;
+  overflow: hidden;
+}
+.clouds img {
+  position: absolute;
+  bottom: 0;
+  max-width: 100%;
+  animation: animate calc(2s * var(--i)) linear infinite;
+}
+@keyframes animate {
+  0% {
+    opacity: 0;
+    transform: scale(1);
+  }
+  25%,
+  75% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+    transform: scale(3);
+  }
+}
+section {
+  padding: 20px 40px;
+}
+section h1 {
+  font-size: 4rem;
+  margin-bottom: 20px;
+}
+@media screen and (max-width: 1000px) {
+  h2 {
+    font-size: 8rem;
+  }
+  h1 {
+    font-size: 2rem;
+  }
+}
+@media screen and (max-width: 800px) {
+  h2 {
+    font-size: 6rem;
+  }
+  h1 {
+    font-size: 1.2rem;
+  }
 }
